@@ -1,15 +1,15 @@
 package com.gregtechceu.gtceu.common.item.behavior;
 
+import com.gregtechceu.gtceu.api.blockentity.MetaMachineBlockEntity;
 import com.gregtechceu.gtceu.api.capability.recipe.ItemRecipeCapability;
 import com.gregtechceu.gtceu.api.item.component.IAddInformation;
 import com.gregtechceu.gtceu.api.item.component.IDataItem;
 import com.gregtechceu.gtceu.api.item.component.IInteractionItem;
-import com.gregtechceu.gtceu.api.machine.MetaMachine;
-import com.gregtechceu.gtceu.api.recipe.GTRecipe;
+import com.gregtechceu.gtceu.api.machine.feature.IDataStickInteractable;
+import com.gregtechceu.gtceu.api.recipe.kind.GTRecipe;
 import com.gregtechceu.gtceu.api.recipe.GTRecipeType;
-import com.gregtechceu.gtceu.data.tag.GTDataComponents;
-import com.gregtechceu.gtceu.integration.ae2.machine.MEPatternBufferPartMachine;
-import com.gregtechceu.gtceu.integration.ae2.machine.MEPatternBufferProxyPartMachine;
+import com.gregtechceu.gtceu.common.machine.owner.MachineOwner;
+import com.gregtechceu.gtceu.data.item.GTDataComponents;
 import com.gregtechceu.gtceu.utils.ResearchManager;
 
 import net.minecraft.ChatFormatting;
@@ -20,7 +20,6 @@ import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.TooltipFlag;
 import net.minecraft.world.item.context.UseOnContext;
-import net.minecraft.world.level.Level;
 
 import com.mojang.datafixers.util.Pair;
 import it.unimi.dsi.fastutil.objects.ObjectOpenHashSet;
@@ -50,15 +49,14 @@ public class DataItemBehavior implements IInteractionItem, IAddInformation, IDat
                                 TooltipFlag isAdvanced) {
         Pair<GTRecipeType, String> researchData = ResearchManager.readResearchId(stack);
         if (researchData == null) {
-            if (stack.has(GTDataComponents.DATA_COPY_POS)) {
-                BlockPos posArray = stack.get(GTDataComponents.DATA_COPY_POS);
+            BlockPos pos = stack.get(GTDataComponents.DATA_COPY_POS);
+            if (pos != null) {
                 tooltipComponents.add(Component.translatable(
                         "gtceu.tooltip.proxy_bind",
-                        Component.literal("" + posArray.getX()).withStyle(ChatFormatting.LIGHT_PURPLE),
-                        Component.literal("" + posArray.getY()).withStyle(ChatFormatting.LIGHT_PURPLE),
-                        Component.literal("" + posArray.getZ()).withStyle(ChatFormatting.LIGHT_PURPLE)));
+                        Component.literal("" + pos.getX()).withStyle(ChatFormatting.LIGHT_PURPLE),
+                        Component.literal("" + pos.getY()).withStyle(ChatFormatting.LIGHT_PURPLE),
+                        Component.literal("" + pos.getZ()).withStyle(ChatFormatting.LIGHT_PURPLE)));
             }
-
         } else {
             Collection<GTRecipe> recipes = researchData.getFirst().getDataStickEntry(researchData.getSecond());
             if (recipes != null && !recipes.isEmpty()) {
@@ -67,7 +65,7 @@ public class DataItemBehavior implements IInteractionItem, IAddInformation, IDat
                 outer:
                 for (GTRecipe recipe : recipes) {
                     ItemStack output = ItemRecipeCapability.CAP
-                            .of(recipe.getOutputContents(ItemRecipeCapability.CAP).get(0).content).getItems()[0];
+                            .of(recipe.getOutputContents(ItemRecipeCapability.CAP).getFirst().content).getItems()[0];
                     for (var item : added) {
                         if (output.is(item.getItem())) continue outer;
                     }
@@ -82,24 +80,24 @@ public class DataItemBehavior implements IInteractionItem, IAddInformation, IDat
     }
 
     @Override
-    public InteractionResult useOn(UseOnContext context) {
-        Level level = context.getLevel();
-        BlockPos pos = context.getClickedPos();
-        ItemStack stack = context.getItemInHand();
-        if (!level.isClientSide) {
-            MetaMachine machine = MetaMachine.getMachine(level, pos);
-            Pair<GTRecipeType, String> researchData = ResearchManager.readResearchId(stack);
-            if (machine instanceof MEPatternBufferPartMachine && researchData == null) {
-                stack.set(GTDataComponents.DATA_COPY_POS, pos);
-            } else if (machine instanceof MEPatternBufferProxyPartMachine proxy) {
-                if (stack.has(GTDataComponents.DATA_COPY_POS)) {
-                    BlockPos bufferPos = stack.get(GTDataComponents.DATA_COPY_POS);
-                    proxy.setBuffer(bufferPos);
+    public InteractionResult onItemUseFirst(ItemStack itemStack, UseOnContext context) {
+        if (context.getLevel().getBlockEntity(context.getClickedPos()) instanceof MetaMachineBlockEntity blockEntity) {
+            var machine = blockEntity.getMetaMachine();
+            if (!MachineOwner.canOpenOwnerMachine(context.getPlayer(), machine)) {
+                return InteractionResult.FAIL;
+            }
+            if (machine instanceof IDataStickInteractable interactable) {
+                if (context.isSecondaryUseActive()) {
+                    if (ResearchManager.readResearchId(itemStack) == null) {
+                        return interactable.onDataStickShiftUse(context.getPlayer(), itemStack);
+                    }
+                } else {
+                    return interactable.onDataStickUse(context.getPlayer(), itemStack);
                 }
             } else {
                 return InteractionResult.PASS;
             }
         }
-        return InteractionResult.sidedSuccess(level.isClientSide);
+        return InteractionResult.sidedSuccess(context.getLevel().isClientSide);
     }
 }
