@@ -9,29 +9,28 @@ import com.gregtechceu.gtceu.api.capability.recipe.FluidRecipeCapability;
 import com.gregtechceu.gtceu.api.capability.recipe.IO;
 import com.gregtechceu.gtceu.api.capability.recipe.ItemRecipeCapability;
 import com.gregtechceu.gtceu.api.gui.GuiTextures;
+import com.gregtechceu.gtceu.api.gui.widget.SlotWidget;
+import com.gregtechceu.gtceu.api.gui.widget.TankWidget;
 import com.gregtechceu.gtceu.api.recipe.*;
 import com.gregtechceu.gtceu.api.recipe.content.Content;
+import com.gregtechceu.gtceu.api.recipe.ingredient.SizedIngredientExtensions;
+import com.gregtechceu.gtceu.api.recipe.kind.*;
 import com.gregtechceu.gtceu.api.registry.GTRegistries;
 import com.gregtechceu.gtceu.api.sound.ExistingSoundEntry;
-import com.gregtechceu.gtceu.api.transfer.item.CustomItemStackHandler;
-import com.gregtechceu.gtceu.common.machine.trait.customlogic.CannerLogic;
-import com.gregtechceu.gtceu.common.machine.trait.customlogic.FormingPressLogic;
-import com.gregtechceu.gtceu.common.machine.trait.customlogic.LargeBoilerLogic;
-import com.gregtechceu.gtceu.common.machine.trait.customlogic.SteamBoilerLogic;
-import com.gregtechceu.gtceu.common.recipe.RPMCondition;
-import com.gregtechceu.gtceu.common.recipe.RockBreakerCondition;
+import com.gregtechceu.gtceu.api.transfer.fluid.CustomFluidTank;
+import com.gregtechceu.gtceu.common.machine.multiblock.electric.FusionReactorMachine;
+import com.gregtechceu.gtceu.common.machine.trait.customlogic.*;
+import com.gregtechceu.gtceu.common.recipe.condition.RockBreakerCondition;
 import com.gregtechceu.gtceu.data.machine.GTMachines;
 import com.gregtechceu.gtceu.data.material.GTMaterials;
-import com.gregtechceu.gtceu.data.recipe.builder.GTRecipeBuilder;
+import com.gregtechceu.gtceu.common.recipe.builder.GTRecipeBuilder;
 import com.gregtechceu.gtceu.data.sound.GTSoundEntries;
-import com.gregtechceu.gtceu.integration.kjs.GTRegistryInfo;
+import com.gregtechceu.gtceu.integration.xei.handlers.item.CycleItemStackHandler;
 import com.gregtechceu.gtceu.utils.ResearchManager;
 
-import com.lowdragmc.lowdraglib.gui.widget.SlotWidget;
-import com.lowdragmc.lowdraglib.gui.widget.TankWidget;
-import com.lowdragmc.lowdraglib.utils.CycleItemStackHandler;
 import com.lowdragmc.lowdraglib.utils.LocalizationUtils;
 
+import lombok.experimental.ExtensionMethod;
 import net.minecraft.client.resources.language.I18n;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.resources.ResourceLocation;
@@ -40,26 +39,16 @@ import net.minecraft.sounds.SoundSource;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.RecipeType;
 import net.minecraft.world.level.material.Fluids;
-import net.neoforged.fml.ModLoader;
 import net.neoforged.neoforge.fluids.FluidStack;
-import net.neoforged.neoforge.fluids.capability.templates.FluidTank;
 import net.neoforged.neoforge.fluids.crafting.SizedFluidIngredient;
 
-import com.simibubi.create.AllBlocks;
-import org.jetbrains.annotations.Nullable;
-
-import java.text.NumberFormat;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
 import static com.lowdragmc.lowdraglib.gui.texture.ProgressTexture.FillDirection.*;
 
-/**
- * @author KilaBash
- * @date 2023/2/20
- * @implNote GTRecipeTypes
- */
+@ExtensionMethod(SizedIngredientExtensions.class)
 public class GTRecipeTypes {
 
     public static final String STEAM = "steam";
@@ -67,10 +56,10 @@ public class GTRecipeTypes {
     public static final String GENERATOR = "generator";
     public static final String MULTIBLOCK = "multiblock";
     public static final String DUMMY = "dummy";
-    public static final String KINETIC = "kinetic";
 
     static {
         GTRegistries.RECIPE_TYPES.unfreeze();
+        GTRegistries.RECIPE_CATEGORIES.unfreeze();
     }
 
     //////////////////////////////////////
@@ -86,7 +75,6 @@ public class GTRecipeTypes {
                     GTRecipeTypes.LARGE_BOILER_RECIPES.copyFrom(builder).duration(duration).save(provider);
                 }
             })
-            .addCustomRecipeLogic(new SteamBoilerLogic())
             .setMaxTooltips(1)
             .setSound(GTSoundEntries.FURNACE);
 
@@ -119,11 +107,12 @@ public class GTRecipeTypes {
                                 .isEmpty()) {
                     recipeBuilder.inputFluids(GTMaterials.Oxygen.getFluid(recipeBuilder.duration));
                 }
-            });
+            })
+            .addCustomRecipeLogic(ArcFurnaceLogic.INSTANCE);
 
     public final static GTRecipeType ASSEMBLER_RECIPES = register("assembler", ELECTRIC).setMaxIOSize(9, 1, 1, 0)
             .setEUIO(IO.IN)
-            .setSlotOverlay(false, false, GuiTextures.CIRCUIT_OVERLAY)
+            .setSlotOverlay(false, false, GuiTextures.SLOT)
             .setProgressBar(GuiTextures.PROGRESS_BAR_ASSEMBLER, LEFT_TO_RIGHT)
             .setSound(GTSoundEntries.ASSEMBLER);
 
@@ -146,15 +135,18 @@ public class GTRecipeTypes {
             .prepareBuilder(recipeBuilder -> recipeBuilder.duration(128).EUt(4))
             .setSlotOverlay(false, false, GuiTextures.BREWER_OVERLAY)
             .setProgressBar(GuiTextures.PROGRESS_BAR_ARROW_MULTIPLE, LEFT_TO_RIGHT)
+            .addCustomRecipeLogic(BreweryLogic.INSTANCE)
             .setSound(GTSoundEntries.CHEMICAL);
 
     public final static GTRecipeType MACERATOR_RECIPES = register("macerator", ELECTRIC).setMaxIOSize(1, 4, 0, 0)
             .setEUIO(IO.IN)
+            .prepareBuilder(recipeBuilder -> recipeBuilder.duration(150).EUt(2))
             .setSlotOverlay(false, false, GuiTextures.CRUSHED_ORE_OVERLAY)
             .setSlotOverlay(true, false, GuiTextures.DUST_OVERLAY)
             .setProgressBar(GuiTextures.PROGRESS_BAR_MACERATE, LEFT_TO_RIGHT)
             .setIconSupplier(() -> GTMachines.MACERATOR[GTValues.LV].asStack())
             .setSteamProgressBar(GuiTextures.PROGRESS_BAR_MACERATE_STEAM, LEFT_TO_RIGHT)
+            .addCustomRecipeLogic(MaceratorLogic.INSTANCE)
             .setSound(GTSoundEntries.MACERATOR);
 
     public final static GTRecipeType CANNER_RECIPES = register("canner", ELECTRIC).setMaxIOSize(2, 2, 1, 1)
@@ -165,7 +157,7 @@ public class GTRecipeTypes {
             .setSlotOverlay(false, true, GuiTextures.DARK_CANISTER_OVERLAY)
             .setSlotOverlay(true, true, GuiTextures.DARK_CANISTER_OVERLAY)
             .setProgressBar(GuiTextures.PROGRESS_BAR_CANNER, LEFT_TO_RIGHT)
-            .addCustomRecipeLogic(new CannerLogic())
+            .addCustomRecipeLogic(CannerLogic.INSTANCE)
             .setSound(GTSoundEntries.BATH);
 
     public final static GTRecipeType CENTRIFUGE_RECIPES = register("centrifuge", ELECTRIC).setMaxIOSize(2, 6, 1, 6)
@@ -223,14 +215,14 @@ public class GTRecipeTypes {
                         recipeBuilder.tickInput.getOrDefault(FluidRecipeCapability.CAP, Collections.emptyList())
                                 .isEmpty()) {
                     recipeBuilder
-                            .copy(ResourceLocation.parse(recipeBuilder.id.toString() + "_water"))
+                            .copy(recipeBuilder.id.withSuffix("_water"))
                             .inputFluids(GTMaterials.Water.getFluid((int) Math.max(4,
                                     Math.min(1000, recipeBuilder.duration * recipeBuilder.EUt() / 320))))
                             .duration(recipeBuilder.duration * 2)
                             .save(provider);
 
                     recipeBuilder
-                            .copy(ResourceLocation.parse(recipeBuilder.id.toString() + "_distilled_water"))
+                            .copy(recipeBuilder.id.withSuffix("_distilled_water"))
                             .inputFluids(GTMaterials.DistilledWater.getFluid((int) Math.max(3,
                                     Math.min(750, recipeBuilder.duration * recipeBuilder.EUt() / 426))))
                             .duration((int) (recipeBuilder.duration * 1.5))
@@ -317,7 +309,7 @@ public class GTRecipeTypes {
     public final static GTRecipeType FORMING_PRESS_RECIPES = register("forming_press", ELECTRIC)
             .setMaxIOSize(6, 1, 0, 0).setEUIO(IO.IN)
             .setProgressBar(GuiTextures.PROGRESS_BAR_COMPRESS, LEFT_TO_RIGHT)
-            .addCustomRecipeLogic(new FormingPressLogic())
+            .addCustomRecipeLogic(FormingPressLogic.INSTANCE)
             .setSound(GTSoundEntries.COMPRESSOR);
 
     public final static GTRecipeType LATHE_RECIPES = register("lathe", ELECTRIC).setMaxIOSize(1, 2, 0, 0).setEUIO(IO.IN)
@@ -390,7 +382,7 @@ public class GTRecipeTypes {
                 if (recipeBuilder.input.getOrDefault(FluidRecipeCapability.CAP, Collections.emptyList()).isEmpty() &&
                         recipeBuilder.tickInput.getOrDefault(FluidRecipeCapability.CAP, Collections.emptyList())
                                 .isEmpty()) {
-                    recipeBuilder.copy(ResourceLocation.parse(recipeBuilder.id.toString() + "_soldering_alloy"))
+                    recipeBuilder.copy(recipeBuilder.id.withSuffix("_soldering_alloy"))
                             .inputFluids(GTMaterials.SolderingAlloy
                                     .getFluid(Math.max(1, (GTValues.L / 2) * recipeBuilder.getSolderMultiplier())))
                             .save(provider);
@@ -439,17 +431,13 @@ public class GTRecipeTypes {
                 var fluidA = BuiltInRegistries.FLUID.get(ResourceLocation.parse(recipe.data.getString("fluidA")));
                 var fluidB = BuiltInRegistries.FLUID.get(ResourceLocation.parse(recipe.data.getString("fluidB")));
                 if (fluidA != Fluids.EMPTY) {
-                    FluidTank tank = new FluidTank(1000);
-                    tank.setFluid(new FluidStack(fluidA, 1000));
-                    widgetGroup.addWidget(new TankWidget(tank, widgetGroup.getSize().width - 30,
-                            widgetGroup.getSize().height - 30, false, false)
+                    widgetGroup.addWidget(new TankWidget(new CustomFluidTank(new FluidStack(fluidA, 1000)),
+                            widgetGroup.getSize().width - 30, widgetGroup.getSize().height - 30, false, false)
                             .setBackground(GuiTextures.FLUID_SLOT).setShowAmount(false));
                 }
                 if (fluidB != Fluids.EMPTY) {
-                    FluidTank tank = new FluidTank(1000);
-                    tank.setFluid(new FluidStack(fluidB, 1000));
-                    widgetGroup.addWidget(new TankWidget(tank, widgetGroup.getSize().width - 30 - 20,
-                            widgetGroup.getSize().height - 30, false, false)
+                    widgetGroup.addWidget(new TankWidget(new CustomFluidTank(new FluidStack(fluidB, 1000)),
+                            widgetGroup.getSize().width - 30 - 20, widgetGroup.getSize().height - 30, false, false)
                             .setBackground(GuiTextures.FLUID_SLOT).setShowAmount(false));
                 }
             })
@@ -499,7 +487,6 @@ public class GTRecipeTypes {
             .setMaxIOSize(1, 0, 1, 1)
             .setProgressBar(GuiTextures.PROGRESS_BAR_BOILER_FUEL.get(true), DOWN_TO_UP)
             .setMaxTooltips(1)
-            .addCustomRecipeLogic(new LargeBoilerLogic())
             .setSound(GTSoundEntries.FURNACE);
 
     public final static GTRecipeType COKE_OVEN_RECIPES = register("coke_oven", MULTIBLOCK).setMaxIOSize(1, 1, 0, 1)
@@ -523,7 +510,7 @@ public class GTRecipeTypes {
                 int temp = data.getInt("ebf_temp");
                 ICoilType requiredCoil = ICoilType.getMinRequiredType(temp);
 
-                if (requiredCoil != null && requiredCoil.getMaterial() != null) {
+                if (requiredCoil != null && !requiredCoil.getMaterial().isNull()) {
                     return LocalizationUtils.format("gtceu.recipe.coil.tier",
                             I18n.get(requiredCoil.getMaterial().getUnlocalizedName()));
                 }
@@ -548,12 +535,12 @@ public class GTRecipeTypes {
                 if (recipeBuilder.data.getBoolean("disable_distillery")) return;
                 if (recipeBuilder.output.containsKey(FluidRecipeCapability.CAP)) {
                     long EUt = EURecipeCapability.CAP
-                            .of(recipeBuilder.tickInput.get(EURecipeCapability.CAP).get(0).getContent());
-                    Content inputContent = recipeBuilder.input.get(FluidRecipeCapability.CAP).get(0);
+                            .of(recipeBuilder.tickInput.get(EURecipeCapability.CAP).getFirst().getContent());
+                    Content inputContent = recipeBuilder.input.get(FluidRecipeCapability.CAP).getFirst();
                     SizedFluidIngredient input = FluidRecipeCapability.CAP.of(inputContent.getContent());
                     ItemStack[] outputs = recipeBuilder.output.containsKey(ItemRecipeCapability.CAP) ?
                             ItemRecipeCapability.CAP
-                                    .of(recipeBuilder.output.get(ItemRecipeCapability.CAP).get(0).getContent())
+                                    .of(recipeBuilder.output.get(ItemRecipeCapability.CAP).getFirst().getContent())
                                     .getItems() :
                             null;
                     ItemStack outputItem = outputs == null || outputs.length == 0 ? ItemStack.EMPTY : outputs[0];
@@ -568,20 +555,15 @@ public class GTRecipeTypes {
                                         BuiltInRegistries.FLUID.getKey(output.getFluids()[0].getFluid()).getPath())
                                 .EUt(Math.max(1, EUt / 4)).circuitMeta(i + 1);
 
-                        int ratio = RecipeHelper.getRatioForDistillery(input, output, outputItem);
-                        int recipeDuration = (int) (recipeBuilder.duration *
-                                OverclockingLogic.STD_DURATION_FACTOR);
+                        int ratio = RecipeUtil.getRatioForDistillery(input, output, outputItem);
+                        int recipeDuration = (int) (recipeBuilder.duration * OverclockingLogic.STD_DURATION_FACTOR_INV);
                         boolean shouldDivide = ratio != 1;
 
-                        boolean fluidsDivisible = RecipeHelper.isFluidStackDivisibleForDistillery(input, ratio) &&
-                                RecipeHelper.isFluidStackDivisibleForDistillery(output, ratio);
+                        boolean fluidsDivisible = RecipeUtil.isFluidStackDivisibleForDistillery(input, ratio) &&
+                                RecipeUtil.isFluidStackDivisibleForDistillery(output, ratio);
 
-                        SizedFluidIngredient dividedInputFluid = new SizedFluidIngredient(input.ingredient(),
-                                Math.max(1,
-                                        input.amount() / ratio));
-                        SizedFluidIngredient dividedOutputFluid = new SizedFluidIngredient(output.ingredient(),
-                                Math.max(1,
-                                        output.amount() / ratio));
+                        SizedFluidIngredient dividedInputFluid = input.copyWithAmount(Math.max(1, input.amount() / ratio));
+                        SizedFluidIngredient dividedOutputFluid = output.copyWithAmount(Math.max(1, output.amount() / ratio));
 
                         if (shouldDivide && fluidsDivisible) {
                             builder.chance(inputContent.chance)
@@ -621,11 +603,6 @@ public class GTRecipeTypes {
                     }
                 }
             });
-
-    public static final GTRecipeType EVAPORATION_RECIPES = register("evaporation", ELECTRIC).setMaxIOSize(0, 1, 1, 6)
-            .setEUIO(IO.IN)
-            .setProgressBar(GuiTextures.PROGRESS_BAR_ARROW_MULTIPLE, LEFT_TO_RIGHT)
-            .setSound(GTSoundEntries.MOTOR);
 
     public final static GTRecipeType PYROLYSE_RECIPES = register("pyrolyse_oven", MULTIBLOCK).setMaxIOSize(2, 1, 1, 1)
             .setEUIO(IO.IN)
@@ -678,17 +655,11 @@ public class GTRecipeTypes {
             .setProgressBar(GuiTextures.PROGRESS_BAR_FUSION, LEFT_TO_RIGHT)
             .setSound(GTSoundEntries.ARC)
             .setOffsetVoltageText(true)
-            .addDataInfo(data -> LocalizationUtils.format("gtceu.recipe.eu_to_start",
-                    NumberFormat.getCompactNumberInstance().format(data.getLong("eu_to_start"))));
+            .setMaxTooltips(4)
+            .setUiBuilder(FusionReactorMachine::addEUToStartLabel);
 
     public static final GTRecipeType DUMMY_RECIPES = register("dummy", DUMMY)
             .setXEIVisible(false);
-
-    //////////////////////////////////////
-    // ****** Integration *******//
-    //////////////////////////////////////
-    @Nullable
-    public static GTRecipeType CREATE_MIXER_RECIPES;
 
     public static GTRecipeType register(String name, String group, RecipeType<?>... proxyRecipes) {
         var recipeType = new GTRecipeType(GTCEu.id(name), group, proxyRecipes);
@@ -700,33 +671,8 @@ public class GTRecipeTypes {
     }
 
     public static void init() {
-        GCyMRecipeTypes.init();
-        if (GTCEu.isCreateLoaded()) {
-            CREATE_MIXER_RECIPES = register("create_mixer", KINETIC).setMaxIOSize(6, 1, 2, 1).setEUIO(IO.IN)
-                    .setSlotOverlay(false, false, GuiTextures.DUST_OVERLAY)
-                    .setSlotOverlay(true, false, GuiTextures.DUST_OVERLAY)
-                    .setProgressBar(GuiTextures.PROGRESS_BAR_MIXER, LEFT_TO_RIGHT)
-                    .setSound(GTSoundEntries.MIXER)
-                    .setMaxTooltips(4)
-                    .setUiBuilder((recipe, group) -> {
-                        if (!recipe.conditions.isEmpty() && recipe.conditions.get(0) instanceof RPMCondition) {
-                            var transfer = new CustomItemStackHandler(AllBlocks.SHAFT.asStack());
-                            group.addWidget(new SlotWidget(transfer, 0, group.getSize().width - 30,
-                                    group.getSize().height - 30, false, false));
-                        }
-                    });
-            MIXER_RECIPES.onRecipeBuild((builder, provider) -> {
-                assert CREATE_MIXER_RECIPES != null;
-                CREATE_MIXER_RECIPES.copyFrom(builder)
-                        .duration(Math.max((builder.duration / 2), 1))
-                        .rpm(64)
-                        .save(provider);
-            });
-        }
-        if (GTCEu.isKubeJSLoaded()) {
-            GTRegistryInfo.registerFor(GTRegistries.RECIPE_TYPES.getRegistryName());
-        }
-        ModLoader.postEvent(new GTCEuAPI.RegisterEvent(GTRegistries.RECIPE_TYPES));
+        GCYMRecipeTypes.init();
+        GTCEuAPI.postRegisterEvent(GTRegistries.RECIPE_TYPES);
         GTRegistries.RECIPE_TYPES.freeze();
 
         GTRegistries.register(BuiltInRegistries.RECIPE_SERIALIZER, GTCEu.id("crafting_facade_cover"),
